--- a/index.html
+++ b/index.html
@@ -1,17 +1,64 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Your front-end</title>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <title>LayanAbdullahh restraunt</title>
+  </head>
 
-<body>
-<form action="/fasttext">
-	Enter your text to be classified<br>
-	<input type="text" name="statement">
-	<input type="submit" value="Submit">
-</form> 
+  <body>
+    <center>
+      <font size="6" face="Avenir">
+        <b>
+          <p
+            style="
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              background-color: blueviolet;
+              margin: 0;
+              box-sizing: border-box;
+              padding: 0;
+            "
+          >
+            Layan classification system &nbsp;
+            <img src="logo3.PNG" height="100" width="100" />
+          </p>
+        </b>
+      </font>
+    </center>
+    <center>
+      <form
+        action="/fasttext"
+        style="
+          width: 300px;
+          height: 100px;
+          background-color: bisque;
+          margin: 30px;
+          border-radius: 10px;
+          padding-top: 20px;
+        "
+      >
+        Enter your text to be classified<br />
+        <input type="text" name="statement" />
+        <br />
+        <input type="submit" value="Submit" />
+        <input type="reset" value="Clear" />
+      </form>
+    </center>
 
-</body>
-
-</html> 
+    <center>
+      <div
+        id="labels"
+        style="
+          width: 400px;
+          height: 300px;
+          background-color: beige;
+          border-radius: 10px;
+          margin: 20px;
+        "
+      >
+        <h3>Results</h3>
+      </div>
+    </center>
+  </body>
+</html>
