--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <title>LayanAbdullahh restraunt</title>
   </head>
 
-  <body>
+  <body
+    style="
+      background-image: url(https://img.freepik.com/free-photo/wooden-planks-with-blurred-restaurant-background_1253-56.jpg);
+    "
+  >
     <center>
       <font size="6" face="Avenir">
         <b>
